src/views/Bond/bond.scss
@import 'styles/_colors.scss';

#bond-view {
  position: absolute !important;
  width: 100%;
  height: 100%;
  z-index: 69;
  .MuiBackdrop-root {
    background: rgba(100, 100, 100, 0.5) !important;
    backdrop-filter: blur(33px) !important;
    -webkit-backdrop-filter: blur(33px) !important;
    .ohm-card {
      opacity: 1 !important;
      height: auto;
    }
  }
  @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
    .MuiBackdrop-root {
      background: rgba(0, 0, 0, 0.5) !important;
      backdrop-filter: blur(33px) !important;
      -webkit-backdrop-filter: blur(33px) !important;
      .ohm-card {
        opacity: 1 !important;
        height: auto;
      }
    }
    .ohm-modal {
      max-width: 688px;
      min-height: 605px;
    }
  }

  /* slightly transparent fallback for Firefox (not supporting backdrop-filter) */
  @supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
    .MuiBackdrop-root {
      background: rgba(0, 0, 0, 0.5) !important;
      .ohm-card {
        height: auto;
      }
    }
    .ohm-modal {
      max-width: 688px;
      min-height: 605px;
      opacity: 0.9;
    }
  }

  .ohm-card {
    max-width: 803px;
  }
  .bond-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    .bond-header-logo {
      justify-content: center;
      align-items: center;
      text-align: center;
      display: flex;
      flex-direction: row;
      .ohm-logo-bg {
        height: 40px !important;
        width: 40px !important;
        padding: 8px !important;
        margin-left: 0;
      }
      .bond-header-name {
        text-align: center;
        margin-left: 10px;

        font-style: normal;
        font-weight: 600;
        font-size: 18px;
      }
    }
  }

  .bond-data {
    margin: 10px 0 0 0;
  }

  .bond-price-data {
    .bond-price-data-title {
      font-weight: 700;
      font-size: 16px;
      line-height: 24px;
    }

    .bond-price-data-value {
      // color: $clam-pink;
      font-weight: 800;
      font-size: 24px;
      line-height: 36px;
    }
  }

  .bond-price-data-row {
    display: flex;
    justify-content: space-around;
    text-align: center;
    margin: 23px;
    h4 {
      margin-bottom: 0;
    }
    h3.price {
      font-weight: 600 !important;
    }
  }

  .ohm-input {
    flex: 1;
    min-width: 50%;
    margin: 5px;
  }
}

.transaction-button {
  min-width: 185px !important;
  max-width: 408px;
  margin: 5px !important;
  @media screen and (max-width: 417px) {
    max-width: unset;
    width: 100%;
  }
}

.mobile #bond-view {
  .ohm-card {
    .card-content {
      justify-content: space-evenly !important;
      .bond-toggle-row {
        justify-content: space-evenly !important;
      }
      .input-row {
        flex-direction: column;
        width: 100%;
        justify-content: center;
        align-items: center;
        align-content: center;
        .input-group.ohm-input-group {
          margin: 10px !important;
          width: 75%;
          height: 50px;
        }
        div.stake-button {
          width: 75%;
          margin-left: 0;
          margin-top: 15px;
          height: 50px;
          font-size: 1.3em !important;
        }
      }
    }
  }
}

.bond-modal {
  // background-color: $light-gray100 !important;
  backdrop-filter: blur(100px) !important;
}

.bond-one-table {
  .MuiTabs-indicator {
    // background-color: $otter-dark;
    height: 3px;
  }

  .MuiTab-wrapper {
    font-style: normal;
    font-weight: 600;
    font-size: 18px;
  }
}

.bond-input {
  // background: $light-gray100;
  // border: 1px solid $light-gray300;
  border-radius: 10px;
  outline: none;

  .MuiOutlinedInput-input {
    font-size: 16px;
  }

  .MuiOutlinedInput-notchedOutline {
    // border-color: rgba(255, 255, 255, 0.2) !important;
  }

  .stake-input-btn {
    cursor: pointer;

    p {
      font-weight: 600;
      font-size: 18px;
    }
  }
}

.input-container {
  display: flex;
  @media screen and (max-width: 417px) {
    flex-direction: column;
  }
}

.help-text {
  .help-text-desc {
    font-weight: 300;
    font-size: 14px;
    text-align: center;
  }
}

.bond-balance-title {
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
}

.bond-balance-value {
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
}

@media screen and (max-width: 417px) {
  .bond-price-data-title {
    font-size: 17px !important;
  }

  .bond-price-data-value {
    font-size: 19px !important;
  }
}

.bond-name {
  &-title {
    font-weight: 700;
  }
}

